--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Blog</a></li>
+          <li><a href="#get-started">About</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#recent-blog-posts">Blog</a></li>
           <li class="dropdown"><a href="#"><span>Terms</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               <li><a href="#">Videography</a></li>
@@ -65,12 +65,12 @@
                   <li><a href="#">Documentaries</a></li>
                 </ul>
               </li>
-              <li><a href="#">Meida podcast</a></li>
+              <li><a href="#">Media podcast</a></li>
               <li><a href="#">Photography</a></li>
               <li><a href="#">Video production internship</a></li>
             </ul>
           </li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#footer">Contact</a></li>
         </ul>
       </nav>
 
@@ -128,9 +128,9 @@
 
           <div class="col-lg-6 d-flex align-items-center" data-aos="fade-up">
             <div class="content">
-              <h3>T-SHAfilms(Talent Shade Films), was founded by Mahamba Justin Wellborn in 2018.</h3>
+              <h3>TSHAfilms was founded in the year 2018 by refugees in kakuma refugee camp.</h3>
               <p>It was created purposely to produce films , music videos and audio photography. And promote young talents by training and providing them with access to quality production.
-              <p>T-SHAfilms is located in Kenya , the Turkana west, Kakuma 2, Zone 2, Block 1.</p>
+              <p>T-SHAfilms's Physical location is: Kenya 🇰🇪,  Turkana County , Kakuma refugee Camp .</p>
             </div>
           </div>
 
@@ -209,7 +209,7 @@
                 <div class="col-xl-7 d-flex align-items-center">
                   <div class="card-body">
                     <h4 class="card-title">Graduation</h4>
-                    <p>Validation as a measure of authencity through certification after suucessful completion of the course, there is a graduation ceremony to validate your competency.</p>
+                    <p>Validation as a measure of authencity through certification after suucessful completion of the course, there is a graduation ceremony to validate your competency.After every 4months of a cohort , students are awarded certificate of completion that qualify them for diploma.</p>
                   </div>
                 </div>
               </div>
