--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
               </div>
               <h3>Videography</h3>
               <p>T-SHAfilms does the electronic capture of moving images on electronic media, such as digital cameras, videotapes, and streaming media. This includes specific methods of video editing and post-production as well.</p>
-              <a href="service-details.html" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>
+              <a href="#" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -282,7 +282,7 @@
               </div>
               <h3>One on one interviews</h3>
               <p>T-SHAfilms does 1-on-1 interviews that are in person and occur between one interviewer and the interviewee. The format of these interviews is typically rather straight-forward, and this style tends to be more of what applicants are expecting when called in for an interview.</p>
-              <a href="service-details.html" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>
+              <a href="#" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -294,7 +294,7 @@
               <h3>Photography</h3>
               <p>Creating a timeless look, coupled with a flawless moment,Candid, Joyful and artistic moments with T-SHAfilms
                 Life Through the Lens.</p>
-              <a href="service-details.html" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>
+              <a href="#" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -305,7 +305,7 @@
               </div>
               <h3>Video production</h3>
               <p>Video production is simply everything that goes into the ideation, planning and execution of a video. Historically video production involves three phases: Pre-production, Production and Post-production.</p>
-              <a href="service-details.html" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>
+              <a href="#" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -316,7 +316,7 @@
               </div>
               <h3>Event Coverage</h3>
               <p>At T-SHAfilms, we provide professional event live streaming & broadcasting services in Kenya for small & large events. We also provide professional video cameras and live streaming equipment with lighting gears, lapels and lavaliers for interviews & capturing sound separately.</p>
-              <a href="service-details.html" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>
+              <a href="#" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -327,7 +327,7 @@
               </div>
               <h3>Documentaries</h3>
               <p>A documentary film or documentary is a non-fictional motion-picture intended to "document reality, primarily for the purposes of instruction, education or maintaining a historical record".T-SHAfilms has proffesionals individual with expertise in documentaries to bring a thought to reality.</p>
-              <a href="service-details.html" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>
+              <a href="#" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
