--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Main CSS File -->
+  <!--CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
   
@@ -34,7 +34,7 @@
 
 <body>
 
-  <!-- ======= Header ======= -->
+  <!--Header  -->
   <header id="header" class="header d-flex align-items-center">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
